Dialogue box feature added and appended to Bytey. Current issue is the fact that the box is invisible

--- a/tamagotchi.css
+++ b/tamagotchi.css
@@ -7,14 +7,15 @@
     display: block;
     width: 100%; 
     height: 100%; 
-    top: 0px;
-    left: 0px;
+    top: 50px;
+    left: 1000px;
     right: 0;
     bottom: 0;
     background-color: rgba(0,0,0,0); 
     z-index: 9999; 
     cursor: pointer; 
     pointer-events: none;
+    overflow: visible;
     /* transform: translate(50%, 50%); */
 }
 
@@ -28,6 +29,9 @@
     /* background: wheat; */
     overflow: hidden !important;
     position: relative;
+    top: 80px;
+    bottom: 0px;
+    border: 2px solid blue;
 }
 
 .TamagotchiSpriteSheet {
@@ -59,4 +63,37 @@
 }
 .be_happy {
     top: calc(-128px * var(--pixel-size));
+}
+
+/* Dialogue Box Styles */
+.tamagotchi-dialogue {
+    visibility: visible;
+    display:block;
+    position: absolute;
+    bottom: calc(100% + 10px);
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 50px;
+    background-color: #ffffff !important;
+    border: 2px solid #000 !important;
+    border-radius: 10px;
+    z-index: 9999 !important;
+    pointer-events: auto !important;
+    border: 2px solid red;
+}
+
+.tamagotchi-dialogue p {
+    margin: 0;
+    font-size: 14px;
+    text-align: center;
+}
+
+.tamagotchi-dialogue button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 12px;
 }
